--- a/WebContent/chat.xhtml
+++ b/WebContent/chat.xhtml
@@ -9,7 +9,7 @@
 
 <h:head>
 	<h:outputStylesheet name="grid/grid.css" library="primefaces" />
-	<title>Login</title>
+	<title>Chatt</title>
 </h:head>
 <h:body>
 	<div class="ui-g">
