--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -4,16 +4,26 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
 	<h:head>
 		<title>Login</title>
 	</h:head>
 	<h:body>
 		<h:form>
-		<h:panelGrid columns="2" columnClasses="rightAlign,leftAlign">
+		 <h:panelGrid columns="2" columnClasses="rightAlign,leftAlign">
+			
+			<p:outputLabel for="userNameField" value="Username"></p:outputLabel>
+			<p:inputText id="userNameField" value="#{loginBean.userName}"></p:inputText>
+			
+			<p:outputLabel for="passwordField" value="Password"></p:outputLabel>
+			<p:inputText id="passwordField" value="#{loginBean.password}"></p:inputText>
+			<!-- fysisk nyckel
 			<h:outputLabel value="Key: " > </h:outputLabel>
-			<h:inputText value="#{loginBean.textField}" ></h:inputText>
+			<h:inputText value="#{loginBean.textField}" ></h:inputText> 
+			
+			-->
 			<h:commandButton action="#{loginBean.login}" value="Login" ></h:commandButton>
 			</h:panelGrid>
 		</h:form>
