--- a/WebContent/secured/chat.xhtml
+++ b/WebContent/secured/chat.xhtml
@@ -25,6 +25,8 @@
 					<form id="do-chat" onsubmit="return false">
 						
 						<p:inputText id="message" />
+						<p:outputLabel for="decodeKey" value="To:"></p:outputLabel>
+						<p:inputText id="decodeKey"></p:inputText>
 						<button id="btnSend" onclick="sendMessage()">SEND</button>
 						
 					</form>
